--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,7 +1,12 @@
+@import url("3-header.css");
+@import url("3-footer.css");
+
 body {
-    margin: 0;
-    padding: 0;
     color: #484848;
     font-size: 14px;
-    font-family: Circular, "Helvetica Neue", Arial, sans-serif;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
 }
