--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,4 +1,9 @@
-body{
-    margin: 0;
-    padding: 0;
+@import url("2-header.css");
+@import url("2-footer.css");
+
+body {
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
 }
