--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,10 +1,9 @@
-footer{
-    background-color: #00FF00;
+footer {
+    background-color: #00FF00; 
+    bottom: 0px;
+    display: grid;   
     height: 60px;
-    display: grid;
+    place-items: center; 
+    position: absolute; 
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    align-items: center;
-    justify-content: center;
 }
