--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,26 +1,27 @@
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
-}
-section.filters {
-    background-color: white;
+
+
+.filters {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
-section.filters button {
+
+.container .filters > button {
+    font-size: 18px;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
     border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+    margin-right: 30px;
+    border: 0px;
 }
-section.filters button:hover {
-    opacity: .9;
+
+.container .filters > button:hover {
+    opacity: 90%;
 }
