--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,55 +1,54 @@
-/* search bar */
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
 }
-section.filters {
-    background-color: white;
+
+
+.filters {
+    display: flex;
+    align-items: center;
+    color: #484848;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
-section.filters button {
+
+.filters > button {
+    font-size: 18px;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    margin-left: auto;
     border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+    margin-right: 30px;
+    border: 0px;
 }
-section.filters button:hover {
-    opacity: .9;
+
+.filters > button:hover {
+    opacity: 90%;
 }
-/* location and amenities part of search bar */
-.locations,
-.amenities {
+
+.location, .amenities {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 100%;
     width: 25%;
-    float: left;
+    margin-left: 2%;
 }
-.locations {
+
+.location {
     border-right: 1px solid #DDDDDD;
 }
-.locations h3,
-.amenities h3 {
+
+
+.location > h3, .amenities > h3 {
     font-weight: 600;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
-.locations h4,
-.amenities h4 {
+
+.location > h4, .amenities > h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
