--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,19 +1,28 @@
-.places {
-  text-align: center;
+.places{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 500px;
 }
-.places h1 {
-  font-size: 30px;
-  text-align: left;
+
+.places h1{
+    font-size: 30px;
+    color: #000;
+    width: 100%;
+    margin-left: 20px;
 }
-article {
-  width: 390px;
-  border: 1px solid #FF5A5F;
-  border-radius: 4px;
-  padding: 20px;
-  margin: 20px;
-  display: inline-block;
+
+.places article{
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
 }
-article h2 {
-  font-size: 30px;
-  text-align: center;
+
+.places article h2{
+    font-size: 30px;
+    color: #000;
 }
